Adds clear all events button

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,6 +1,16 @@
+.p-5 {
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+}
+
+.display-3,
+.lead {
+  text-align: center;
 }
 
 textarea {
@@ -56,4 +66,16 @@ textarea {
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.clearBtn {
+  background-color: white;
+  color: red;
+  border: red 2.5px solid;
+  border-radius: 10px;
+}
+
+.clearBtn:hover {
+  background-color: red;
+  color: white;
 }
